<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="#e8e8e8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:weightSum="10"
            android:orientation="horizontal"
            android:padding="5dp">
            <LinearLayout
                android:id="@+id/layout_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical"
                android:gravity="center">
                <com.example.tetris.views.TetrisView
                    android:id="@+id/view_tetris"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="bottom"
                android:paddingBottom="52dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_label_current_score"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_current_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_default_score_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:text="@string/tv_label_high_score"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_high_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_default_score_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_label_next"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:textAllCaps="true"
                        android:textStyle="bold"/>
                    <com.example.tetris.views.NextBlockView
                        android:id="@+id/view_next_block"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">
            <Button
                android:id="@+id/btn_motion_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btn_motion_left"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_motion_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btn_motion_down"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_motion_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btn_motion_right"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_motion_rotation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/btn_motion_rotation"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
